# kwiz-kreator

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirement.txt  requirements.txt  setup.cfg  setup.py
data/: foobar.json  foobar2.json  trivia.json
kwiz_kreator/: main.py
kwiz_kreator/data/: foobar.json  recent_files.json  temp.json  test1.json  test2.json  trivia.json
kwiz_kreator/images/: .xdp-.goutputstream-HSLEE2-LjmHF7  .xdp-bitmap_Layer 1.png-bgjHqX  .xdp-bitmap_Layer 1.xcf  foo  icon.xcf
kwiz_kreator/src/: app.py  app_state.py
kwiz_kreator/src/models/: choice.py  grammar_match.py  question.py  quiz.py  trivia.py
kwiz_kreator/src/modules/: app_config.py  connect_controls.py  date_check.py  decorators.py  find_first_available_publish_date.py  grammar_checker.py  upload_via_ftp.py
kwiz_kreator/src/preview/: launch.py
kwiz_kreator/src/ui/: __init__.py  correction_action.py  highlighter.py  prefs_dialog.py  prefs_dialog.ui  spell_check_wrapper.py  spell_text_edit.py  ui_main_window.py  ui_main_window.ui  ui_main_window_old.py  ui_main_window_ref.py
src/: __init__.py  app.py  app_state.py
src/models/: __init__.py  choice.py  question.py  quiz.py  trivia.py
src/state/: __init__.py  selected_quiz_state.py  trivia_state.py
src/ui/: ui_main_window.py  ui_main_window.ui
src/ui/assets/: ui_main_window.py
tests/src/models/: test_choice.py  test_question.py  test_quiz.py  test_trivia.py
tests/src/modules/: test_find_first_available_publish_date.py
