[metadata]
name = Kwiz_Kreator
version = 0.1.0

[options]
packages = find:

[options]
install_requires =
    argcomplete == 3.1.2
    click == 8.1.7
    packaging == 23.2
    PyQt5 == 5.15.10
    PyQt5-Qt5 == 5.15.2
    PyQt5-sip == 12.13.0
    PyQt5-stubs == 5.15.6.0
    python-dateutil == 2.8.2
    pytz == 2023.3.post1
    six == 1.16.0
    tzdata == 2023.3
    userpath == 1.9.1
